--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"http://robert-vaccaro.github.io/Chattin-It-Up",
   "name": "socket-app",
   "version": "0.1.0",
   "private": true,
@@ -9,7 +10,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-icons": "^3.7.0",
-    "react-scripts": "3.1.1",
+    "react-scripts": "^3.3.0",
     "sass": "^1.22.12",
     "scss": "^0.2.4",
     "socket.io": "^2.2.0",
@@ -24,7 +25,9 @@
     "styles:w": "nodemon -e scss -x \"npm run styles\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
@@ -40,6 +43,7 @@
   },
   "devDependencies": {
     "concurrently": "^4.1.2",
+    "gh-pages": "^2.1.1",
     "nodemon": "^1.19.2"
   }
 }
